misc: Java language level migration