@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 The Authors
+ * Copyright 2026 The Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -126,7 +126,7 @@ final class M68kLabelDocumentationProvider extends AbstractDocumentationProvider
     }
 
     if (ContainerUtil.getLastItem(comments).isEmpty()) {
-      comments.remove(comments.size() - 1);
+      comments.removeLast();
     }
     final List<String> orderedComments = ContainerUtil.reverse(comments);
     return StringUtil.join(orderedComments, BR);
